<resources>
    <string name="app_name">COVID Info</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="name">Patient\'s Name</string>
    <string name="add">Patient\'s Address</string>
    <string name="age">Patient\'s Age</string>
    <string name="tel">Patient\'s Telephone No</string>
    <string name="symptoms">Symptoms</string>
    <string name="fever">Fever</string>
    <string name="tiredness">Tiredness</string>
    <string name="cough">Dry cough</string>
    <string name="soreThroat">Sore Throat</string>
    <string name="headache">Headache</string>
    <string name="achesAndPains">Aches and Pains</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="default_notification_channel_id" />
    <string name="fcm_message" />
    <string name="default_notification_channel_name" />
    <string name="msg_token_fmt">hi</string>
    <string name="need_a_new_account">Need A new account?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="create_a_new_account">Create a New account</string>
    <string name="hello_welcome">Hello Welcome</string>
    <string name="log_in">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hi_there">Hi there</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="title_activity_nav_hospitals">Map</string>
    <string name="facebook_app_id">259731408449284</string>
    <string name="fb_login_protocol_scheme">fb259731408449284</string>

</resources>
