<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"

    >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/hello_welcome"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_newAccount"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:background="@color/warning_stroke_color"
        android:text="@string/need_a_new_account"
        android:textColor="@color/sweet_dialog_bg_color_dark"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_logIn" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"

        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@color/success_stroke_color"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp" />

</RelativeLayout>